--- a/css/styles.css
+++ b/css/styles.css
@@ -262,6 +262,8 @@ color:var(--secondary-color);
 			display:inline-block;
 			margin-left:30px;
 			background-color:var(--third-color);
+	box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
+    border-radius: 0px 0px 4px 4px;
 }
 .person-img {
 }
