--- a/css/styles.css
+++ b/css/styles.css
@@ -340,7 +340,8 @@ line-height: 1.2;
 letter-spacing: 0.06em;
 text-align: left;
 color:var(--main-color);
-margin-left:15px;
+margin-left:24px;
+	margin-top:20px;
 
 }
 .content-paragraf {
@@ -348,7 +349,9 @@ font-size: 16px;
 text-align:left;
 letter-spacing: 0.03em;
 color:var(--secondary-color);
-margin-left:15px;
+margin-left:24px;
+	margin-top:5px;
+	margin-bootom:20px;
 
 }
 .content-img {
