--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,8 @@ letter-spacing: 0.06em;
 text-align: left;
 color:var(--main-color);
 margin-left:24px;
-	margin-top:20px;
+margin-top:20px;
+margin-bottom:20px;
 
 }
 .content-paragraf {
@@ -348,8 +349,7 @@ text-align:left;
 letter-spacing: 0.03em;
 color:var(--secondary-color);
 margin-left:24px;
-	margin-top:5px;
-	margin-bootom:20px;
+margin-bootom:20px;
 
 }
 .content-img {
