--- a/css/styles.css
+++ b/css/styles.css
@@ -257,6 +257,7 @@ color:var(--secondary-color);
 .person-list {
 	display:flex;
 	margin-top:50px;
+	width:1200px;
 }
 .person-item{
 			display:inline-block;
@@ -264,6 +265,9 @@ color:var(--secondary-color);
 			background-color:var(--third-color);
 	box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
     border-radius: 0px 0px 4px 4px;
+}
+.person-item:first-child {
+margin-left:0;	
 }
 .person-img {
 }
