--- a/css/styles.css
+++ b/css/styles.css
@@ -351,7 +351,7 @@ text-align:left;
 letter-spacing: 0.03em;
 color:var(--secondary-color);
 margin-left:24px;
-margin-bootom:20px;
+margin-bottom:20px;
 
 }
 .content-img {
